fixed a few things: legends in forms, alignment in forms, uniformity of logged in nav bars, connected forget_password to flow

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -4,6 +4,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 0.1em solid var(--button-border);
+    border-radius: 0.5em;
 }
 
 .form-container form {
@@ -18,22 +20,23 @@
     margin:0.5em;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     flex-flow: wrap;
     width: 100%;
 }
 
-.form-item > input {
+.form-item > label {
+    min-width: 10em;
+}
+
+.form-item > input, .form-item > textarea {
     max-width: 80%;
     margin-left: 1em;
+    flex-grow: 1;
 }
 
 .form-container legend {
     font-weight:bold;
-    padding-top: 0.5em;
+    margin-bottom: 0.5em;
     font-size: 1.8em;
-}
-
-.form-button {
-    font-size: 1em;
 }
